Endpoint to signup business
