# restapi/doc.go
@@ -5,7 +5,6 @@
 //	Find the best price for your medicine
 //	Schemes:
 //	  http
-//	  https
 //	Host: localhost
 //	BasePath: /
 //	Version: 1.0.0
